objects/IPM_Escalated_Complaint__c.object
<CustomObject>
    <description>IPMG - Represents when a complaint from either the CSC or another source is escalated and the Portfolio Manager is required to get involved in the resolution.</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Escalated Complaints</relationshipLabel>
        <relationshipName>Escalated_Complaints</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Breach_of_Legislation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breach of Legislation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CSC_Agent__c</fullName>
        <label>CSC Agent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CSC_Closure_Date__c</fullName>
        <label>CSC Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_CSC_Reference_Id__c</fullName>
        <label>CSC Reference Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Complaint_Category__c</fullName>
        <label>Complaint Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Decision Making</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Provider Complaints</fullName>
                </value>
                <value>
                    <fullName>Reforms 2015</fullName>
                </value>
                <value>
                    <fullName>Suitable Employment</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>WHS Customer Service</fullName>
                </value>
                <value>
                    <fullName>WHS Outcome</fullName>
                </value>
                <value>
                    <fullName>WHS Process</fullName>
                </value>
                <value>
                    <fullName>WHS Response Management</fullName>
                </value>
                <value>
                    <fullName>Work Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Date_CSC_Advised_of_Resolution_by_PM__c</fullName>
        <label>Date CSC Advised of Resolution by PM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Date_of_Receipt_by_SIRA__c</fullName>
        <label>Date of Receipt by SIRA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Name_of_Claimant__c</fullName>
        <label>Name of Claimant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSC</fullName>
                    <default>true</default>
                    <label>CSC</label>
                </value>
                <value>
                    <fullName>Non-CSC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <inlineHelpText>Closed is when the CSC closed the complaint.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Escalated Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Complaint_Category__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Escalated_Complaints</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Complaint_Category__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IPM_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Closed Escalated Complaints</label>
    </listViews>
    <listViews>
        <fullName>My_Escalated_Complaints</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Complaint_Category__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Escalated Complaints</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Escalated_Complaints</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Complaint_Category__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IPM_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Open Escalated Complaints</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Escalated Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalated Complaints</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPM_CSC_Closure_Date_must_be_populated</fullName>
        <active>true</active>
        <description>CSC Closure Date must be populated when the Status is Closed.</description>
        <errorConditionFormula>TEXT(IPM_Status__c) = &quot;Closed&quot; &amp;&amp;  TEXT( IPM_CSC_Closure_Date__c ) = &quot;&quot;</errorConditionFormula>
        <errorMessage>CSC Closure Date must be populated when the Status is Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_Date_of_Resolution_must_be_populated</fullName>
        <active>true</active>
        <description>Date CSC Advised of Resolution by PM must be populated when the Status is Closed.</description>
        <errorConditionFormula>TEXT(IPM_Status__c) = &quot;Closed&quot; &amp;&amp;  TEXT(IPM_Date_CSC_Advised_of_Resolution_by_PM__c) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Date CSC Advised of Resolution by PM must be populated when the Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>